# handbrake-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  TODO.md
.github/workflows/: rust.yml
examples/: copy_english_subtitles.rs  event_stream.rs  get_version.rs  simple_status.rs
src/: error.rs  event.rs  handle.rs  job.rs  lib.rs
src/testing/: mock_command.rs  mod.rs
tests/: control_integration.rs  job_builder.rs  status_integration.rs
