[package]
name = "handbrake"
description = "A safe, ergonomic, and asynchronous Rust crate for controlling the HandBrakeCLI video transcoder."
version = "0.0.1"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/handbrake/"
repository = "https://github.com/reliq-hq/handbrake-rs"
keywords = ["video", "audio", "transcode", "media"]

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.80"
once_cell = "1.19.0" # Added for static initialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-util = { version = "0.7.15", features = ["full"] }

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target."cfg(unix)".dependencies]
nix = { version = "0.30.1", features = ["process", "signal"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_System", "Win32_System_Console"] }
